2.77 RC2 (Fluid) Particle Baking slower compared to 2.67b. #47763

Closed
opened 2016-03-11 16:24:01 +01:00 by Florian · 7 comments

System Information
Intel Core i7 3930K (4GHz, 6Cores, 12Threads), NVidia GTX980. 16GB DDR3-1600.

Blender Version
Broken: Blender 2.77 RC2 64bit (Hash: 1e1118e)
Also tested in build from graphicall.org http://www.graphicall.org/444 (2.77 f65c08c)
Worked: Blender 2.76b 64bit (Hash f337fea)

Short description of error
Baking time of particles is up to 25% higher compared to 2.76b even though it is supposed to be faster due to the change here: https://developer.blender.org/rBc1b76285eef7ab907431c7a539df4b91d969f69e
My guess is this change is responsible for the slower bake time.

CPU usage is also a lower, ramps up slower and never fully reaches 100%.

Quick comparison of a test scene:
Taskmgr_2016-03-11_15-39-29.png

My used test file: untitled.zip

I also tested this with a 400k (2x 200k) particle simulation, 100 frames, showed the same time increase in 2.77 RC2.

Exact steps for others to reproduce the error
Create a particle simulation with fluid particles. (Higher amount recommended.)
Bake it on 2.77 RC2.
Open file in 2.76b and bake again.
Compare bake times in console.

**System Information** Intel Core i7 3930K (4GHz, 6Cores, 12Threads), NVidia GTX980. 16GB DDR3-1600. **Blender Version** Broken: Blender 2.77 RC2 64bit (Hash: 1e1118e) Also tested in build from graphicall.org http://www.graphicall.org/444 (2.77 f65c08c) Worked: Blender 2.76b 64bit (Hash f337fea) **Short description of error** Baking time of particles is up to 25% higher compared to 2.76b even though it is supposed to be faster due to the change here: https://developer.blender.org/rBc1b76285eef7ab907431c7a539df4b91d969f69e My guess is this change is responsible for the slower bake time. CPU usage is also a lower, ramps up slower and never fully reaches 100%. Quick comparison of a test scene: ![Taskmgr_2016-03-11_15-39-29.png](https://archive.blender.org/developer/F289493/Taskmgr_2016-03-11_15-39-29.png) My used test file: [untitled.zip](https://archive.blender.org/developer/F289507/untitled.zip) I also tested this with a 400k (2x 200k) particle simulation, 100 frames, showed the same time increase in 2.77 RC2. **Exact steps for others to reproduce the error** Create a particle simulation with fluid particles. (Higher amount recommended.) Bake it on 2.77 RC2. Open file in 2.76b and bake again. Compare bake times in console.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Mitsuma

Added subscriber: @Mitsuma

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann
Florian self-assigned this 2016-03-11 16:28:28 +01:00
Florian removed their assignment 2016-03-11 16:29:10 +01:00
Bastien Montagne was assigned by Florian 2016-03-11 16:29:10 +01:00
Author

Forgot to name my OS: Windows 10 64bit (v1511)
And in the image is a small error, it should say Blender 2.77 RC2 instead of Blender 2.77 RC.
(My first report here.)

Forgot to name my OS: Windows 10 64bit (v1511) And in the image is a small error, it should say Blender 2.77 RC2 instead of Blender 2.77 RC. (My first report here.)

This si due to switching from dynamic to static schedule… Looks like dynamic is better for heavy, non-homogeneous simulations, while static gives much better results with smaller, homogeneous ones… For now will just switch back to original dynamic scheduling as it was with OpenMP.

This si due to switching from dynamic to static schedule… Looks like dynamic is better for heavy, non-homogeneous simulations, while static gives much better results with smaller, homogeneous ones… For now will just switch back to original dynamic scheduling as it was with OpenMP.

This issue was referenced by e327fb522a

This issue was referenced by e327fb522a8f6991d7cd537f4a7298559d08cff8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47763
No description provided.